--- a/src/assets/scss/_pagination.scss
+++ b/src/assets/scss/_pagination.scss
@@ -3,9 +3,9 @@
     margin-top: 15px;
     align-items: center;
     gap: 7px;
+    padding-left: 0;
 
     li {
-
         width: 31px;
         height: 40px;
         border-radius: 5px !important;
